--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://GeghamSargsyan.github.io/react-workbook.git",
+  "homepage": "http://GeghamSargsyan.github.io/react-workbook",
   "name": "workbook_app",
   "version": "0.1.0",
   "private": true,
